[gd_scene load_steps=8 format=3 uid="uid://dsrr36s2l4lv6"]

[ext_resource type="Script" path="res://scripts/gamemaster.gd" id="1_3nh02"]
[ext_resource type="Texture2D" uid="uid://bliq8wdfoanwa" path="res://assets/tilemap.png" id="1_iuwbf"]
[ext_resource type="PackedScene" uid="uid://caucpay1gd0la" path="res://scene/player_score.tscn" id="4_owa7m"]
[ext_resource type="Script" path="res://scripts/twitchchat.gd" id="4_qqy7p"]
[ext_resource type="PackedScene" uid="uid://b8gtr3wmit5g" path="res://addons/twitch_irc_client/twitch_irc_client.tscn" id="5_eodoe"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nh2xn"]
texture = ExtResource("1_iuwbf")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.3033, -8, 5.48008, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2.75, -1.625, -0.375, -3.5, 2.75, -2, 2.75, 1.375, 0, 2.75, -3, 1.625)

[sub_resource type="TileSet" id="TileSet_i87gc"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_nh2xn")

[node name="plinko" type="Node2D"]
script = ExtResource("1_3nh02")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(7, 194)
tile_set = SubResource("TileSet_i87gc")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 0, 0, -2, 131072, 0, -65538, 0, 0, -65539, 131072, 0, -131075, 0, 0, -131076, 131072, 0, -196613, 131072, 0, -262150, 131072, 0, -327686, 0, 0, -327687, 131072, 0, -262149, 0, 0, -262148, 131072, 0, -262147, 0, 0, -196612, 0, 0, -327684, 0, 0, -393220, 131072, 0, -393221, 0, 0, -327685, 131072, 0, -393222, 131072, 0, -393223, 0, 0, -393224, 131072, 0, -393225, 0, 0, -458761, 131072, 0, -458762, 0, 0, -458757, 131072, 0, -458758, 0, 0, -458759, 131072, 0, -458760, 0, 0, -524288, 0, 0, -524287, 131072, 0, -524286, 0, 0, -524285, 131072, 0, -524284, 0, 0, -524283, 131072, 0, -524282, 0, 0, -524281, 131072, 0, -524280, 0, 0, -458744, 131072, 0, -458745, 0, 0, -393209, 131072, 0, -458746, 131072, 0, -458747, 0, 0, -458748, 131072, 0, -393217, 0, 0, -393218, 131072, 0, -393219, 0, 0, -393226, 131072, 0, -327690, 0, 0, -327689, 131072, 0, -327688, 0, 0, -327683, 131072, 0, -327682, 0, 0, -327681, 131072, 0, -393216, 0, 0, -393215, 131072, 0, -393214, 0, 0, -393213, 131072, 0, -393212, 0, 0, -393211, 131072, 0, -393210, 0, 0, -393208, 0, 0, -262154, 131072, 0, -262153, 0, 0, -262152, 131072, 0, -262151, 0, 0, -262146, 131072, 0, -262145, 0, 0, -327680, 131072, 0, -327679, 0, 0, -327678, 131072, 0, -327677, 0, 0, -327676, 131072, 0, -327675, 0, 0, -327674, 131072, 0, -327673, 0, 0, -327672, 131072, 0, -262137, 131072, 0, -262136, 0, 0, -262138, 0, 0, -262139, 131072, 0, -262140, 0, 0, -262141, 131072, 0, -262142, 0, 0, -262143, 131072, 0, -262144, 0, 0, -196609, 131072, 0, -196610, 0, 0, -196611, 131072, 0, -196614, 0, 0, -196615, 131072, 0, -196616, 0, 0, -196617, 131072, 0, -196618, 0, 0, -131082, 131072, 0, -131081, 0, 0, -131080, 131072, 0, -131079, 0, 0, -131078, 131072, 0, -131077, 0, 0, -131074, 131072, 0, -131073, 0, 0, -196607, 0, 0, -196606, 131072, 0, -196605, 0, 0, -196604, 131072, 0, -196603, 0, 0, -196602, 131072, 0, -196601, 0, 0, -196600, 131072, 0, -131064, 0, 0, -131065, 131072, 0, -131066, 0, 0, -131067, 131072, 0, -131068, 0, 0, -131069, 131072, 0, -131070, 0, 0, -131071, 131072, 0, -131072, 0, 0, -65537, 131072, 0, -65540, 0, 0, -65541, 131072, 0, -65542, 0, 0, -7, 0, 0, -8, 131072, 0, -9, 0, 0, -10, 131072, 0, -65546, 0, 0, -65545, 131072, 0, -65544, 0, 0, -65543, 131072, 0, -6, 131072, 0, -5, 0, 0, -4, 131072, 0, -3, 0, 0, -65536, 131072, 0, -65535, 0, 0, -65534, 131072, 0, -65533, 0, 0, -65532, 131072, 0, -65531, 0, 0, -65530, 131072, 0, -65529, 0, 0, -65528, 131072, 0, 8, 0, 0, 7, 131072, 0, 6, 0, 0, 5, 131072, 0, 4, 0, 0, 3, 131072, 0, 2, 0, 0, 1, 131072, 0, 0, 0, 0, 65535, 131072, 0, 65534, 0, 0, 65533, 131072, 0, 65532, 0, 0, 65531, 131072, 0, 65530, 0, 0, 65529, 131072, 0, 65528, 0, 0, 65527, 131072, 0, 65526, 0, 0, 131062, 131072, 0, 131063, 0, 0, 131064, 131072, 0, 131065, 0, 0, 131066, 131072, 0, 131067, 0, 0, 131068, 131072, 0, 131069, 0, 0, 131070, 131072, 0, 131071, 0, 0, 65536, 131072, 0, 65537, 0, 0, 65538, 131072, 0, 65539, 0, 0, 65540, 131072, 0, 65541, 0, 0, 65542, 131072, 0, 65543, 0, 0, 65544, 131072, 0, 196607, 131072, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 65536, 0, 524286, 65536, 0, 524285, 65536, 0, 524284, 65536, 0, 524283, 65536, 0, 524282, 65536, 0, 524281, 65536, 0, 524280, 65536, 0, 524279, 65536, 0, 524278, 65536, 0, 524277, 65536, 0, 524276, 65536, 0, 524275, 65536, 0, 524274, 65536, 0, 458738, 65536, 0, 327666, 65536, 0, 262130, 65536, 0, 393202, 65536, 0, -458766, 65536, 0, -393230, 65536, 0, -327694, 65536, 0, -262158, 65536, 0, -458765, 0, 0, -458764, 0, 0, -458763, 131072, 0, -393227, 0, 0, -327691, 131072, 0, -262155, 0, 0, -196619, 131072, 0, -131083, 0, 0, -65547, 131072, 0, -11, 0, 0, 65525, 131072, 0, 131061, 0, 0, 131060, 131072, 0, 131059, 0, 0, 131058, 65536, 0, 196594, 65536, 0, 65522, 65536, 0, -14, 65536, 0, -65550, 65536, 0, -131086, 65536, 0, -196622, 65536, 0, -327693, 0, 0, -393229, 0, 0, -393228, 131072, 0, -262157, 0, 0, -262156, 131072, 0, -327692, 0, 0, -196620, 0, 0, -196621, 0, 0, -131085, 0, 0, -65549, 0, 0, -13, 0, 0, 65523, 0, 0, 65524, 0, 0, -12, 131072, 0, -65548, 0, 0, -131084, 131072, 0, 196596, 0, 0, 196595, 0, 0, 262131, 0, 0, 327667, 0, 0, 393203, 0, 0, 458739, 0, 0, 458752, 65536, 0, 458753, 65536, 0, 458754, 65536, 0, 458755, 65536, 0, 458756, 65536, 0, 458757, 65536, 0, 458758, 65536, 0, 458759, 65536, 0, 458760, 65536, 0, 458761, 65536, 0, 458762, 65536, 0, 458763, 65536, 0, 458764, 65536, 0, -524276, 65536, 0, -524277, 0, 0, -524278, 0, 0, -524279, 131072, 0, 458745, 0, 0, 393209, 0, 0, 327673, 0, 0, 262137, 0, 0, 196601, 131072, 0, 196600, 0, 0, 196599, 131072, 0, 196598, 0, 0, 196597, 131072, 0, 262133, 0, 0, 262132, 131072, 0, 327668, 65536, 0, 393204, 65536, 0, 458740, 65536, 0, 458741, 0, 0, 393205, 0, 0, 327669, 0, 0, 327670, 65536, 0, 262134, 131072, 0, 262135, 0, 0, 327671, 0, 0, 393207, 0, 0, 393206, 65536, 0, 458742, 65536, 0, 458743, 0, 0, 458744, 65536, 0, 393208, 65536, 0, 327672, 65536, 0, 262136, 131072, 0, 196602, 0, 0, 262138, 131072, 0, 327674, 65536, 0, 393210, 65536, 0, 458746, 65536, 0, 458747, 0, 0, 393211, 0, 0, 327675, 0, 0, 262139, 0, 0, 196603, 131072, 0, 196604, 0, 0, 262140, 131072, 0, 327676, 65536, 0, 393212, 65536, 0, 458748, 65536, 0, 458749, 0, 0, 393213, 0, 0, 327677, 0, 0, 262141, 0, 0, 196605, 131072, 0, 196606, 0, 0, 262142, 131072, 0, 327678, 65536, 0, 393214, 65536, 0, 458750, 65536, 0, 196614, 131072, 0, 131078, 0, 0, 131077, 131072, 0, 131076, 0, 0, 131075, 131072, 0, 131074, 0, 0, 131073, 131072, 0, 131072, 0, 0, 196608, 131072, 0, 262144, 65536, 0, 327680, 65536, 0, 393216, 65536, 0, 393217, 0, 0, 327681, 0, 0, 262145, 0, 0, 196609, 0, 0, 196610, 131072, 0, 262146, 65536, 0, 327682, 65536, 0, 393218, 65536, 0, 393219, 0, 0, 327683, 0, 0, 262147, 0, 0, 196611, 0, 0, 196612, 131072, 0, 262148, 65536, 0, 327684, 65536, 0, 393220, 65536, 0, 393221, 0, 0, 327685, 0, 0, 262149, 0, 0, 196613, 0, 0, 262150, 65536, 0, 327686, 65536, 0, 393222, 65536, 0, 393223, 0, 0, 327687, 0, 0, 262151, 0, 0, 196615, 0, 0, 131079, 131072, 0, 131080, 0, 0, 196616, 131072, 0, 262152, 65536, 0, 327688, 65536, 0, 393224, 65536, 0, 393225, 0, 0, 327689, 0, 0, 262153, 0, 0, 196617, 0, 0, 131081, 131072, 0, 65545, 0, 0, 9, 131072, 0, -65527, 0, 0, -131063, 131072, 0, -196599, 0, 0, -262135, 131072, 0, -327671, 0, 0, -393207, 131072, 0, -458743, 0, 0, -458742, 131072, 0, -393206, 0, 0, -327670, 131072, 0, -262134, 0, 0, -196598, 131072, 0, -131062, 0, 0, -65526, 131072, 0, 10, 0, 0, 65546, 131072, 0, 131082, 0, 0, 196618, 131072, 0, 262154, 65536, 0, 327690, 65536, 0, 393226, 65536, 0, 393227, 0, 0, 327691, 0, 0, 262155, 0, 0, 196619, 0, 0, 131083, 0, 0, 65547, 0, 0, 11, 0, 0, -65525, 0, 0, -131061, 0, 0, -196597, 0, 0, -262133, 0, 0, -327669, 0, 0, -393205, 0, 0, -458741, 0, 0, -458740, 65536, 0, -393204, 65536, 0, -327668, 65536, 0, -262132, 65536, 0, -196596, 65536, 0, -131060, 65536, 0, -65524, 65536, 0, 12, 65536, 0, 65548, 65536, 0, 131084, 65536, 0, 196620, 65536, 0, 262156, 65536, 0, 327692, 65536, 0, 393228, 65536, 0, -196608, 131072, 0, -458749, 0, 0, -458750, 131072, 0, -458751, 0, 0, -458752, 131072, 0, -458753, 131072, 0, -458754, 0, 0, -458755, 131072, 0, -458756, 0, 0, -589813, 0, 0, -589814, 131072, 0, -589815, 0, 0, -589816, 131072, 0, -589817, 0, 0, -589818, 131072, 0, -589819, 0, 0, -589820, 131072, 0, -589821, 0, 0, -589822, 131072, 0, -589823, 0, 0, -589824, 131072, 0, -524289, 0, 0, -524290, 131072, 0, -524291, 0, 0, -524292, 131072, 0, -524293, 0, 0, -524294, 131072, 0, -524295, 0, 0, -524296, 131072, 0, -524297, 0, 0, -524298, 131072, 0, -524299, 0, 0, -524300, 131072, 0, -524301, 0, 0, -589837, 0, 0, -589836, 0, 0, -589835, 131072, 0, -589834, 0, 0, -589833, 131072, 0, -589832, 0, 0, -589831, 131072, 0, -589830, 0, 0, -589829, 131072, 0, -589828, 0, 0, -589827, 131072, 0, -589826, 0, 0, -589825, 131072, 0, -655360, 0, 0, -655359, 131072, 0, -655358, 0, 0, -655357, 131072, 0, -655356, 0, 0, -655355, 131072, 0, -655354, 0, 0, -655353, 131072, 0, -655352, 0, 0, -655351, 131072, 0, -655350, 0, 0, -655349, 0, 0, -720885, 0, 0, -720886, 131072, 0, -720887, 0, 0, -720888, 131072, 0, -720889, 0, 0, -720890, 131072, 0, -720891, 0, 0, -720892, 131072, 0, -720893, 0, 0, -720894, 131072, 0, -720895, 0, 0, -720896, 131072, 0, -655361, 0, 0, -655362, 131072, 0, -655363, 0, 0, -655364, 131072, 0, -655365, 0, 0, -655366, 131072, 0, -655367, 0, 0, -655368, 131072, 0, -655369, 0, 0, -655370, 131072, 0, -655371, 0, 0, -655372, 131072, 0, -655373, 0, 0, -720909, 0, 0, -720908, 0, 0, -720907, 131072, 0, -720906, 0, 0, -786424, 0, 0, -786423, 131072, 0, -786422, 0, 0, -786421, 0, 0, -786425, 131072, 0, -786426, 0, 0, -786427, 131072, 0, -786428, 0, 0, -786429, 131072, 0, -786430, 0, 0, -786431, 131072, 0, -786432, 0, 0, -720897, 131072, 0, -720898, 0, 0, -720899, 131072, 0, -720900, 0, 0, -720901, 131072, 0, -720902, 0, 0, -720903, 131072, 0, -720904, 0, 0, -720905, 131072, 0, -524302, 65536, 0, -589838, 65536, 0, -655374, 65536, 0, -720910, 65536, 0, -786446, 65536, 0, -851982, 65536, 0, -917518, 65536, 0, -983054, 65536, 0, -1048590, 65536, 0, -1114126, 65536, 0, -1507342, 65536, 0, -1572878, 65536, 0, -1441806, 65536, 0, -1376270, 65536, 0, -1310734, 65536, 0, -1245198, 65536, 0, -1179662, 65536, 0, -589812, 65536, 0, -655348, 65536, 0, -720884, 65536, 0, -786420, 65536, 0, -851956, 65536, 0, -917492, 65536, 0, -983028, 65536, 0, -1048564, 65536, 0, -1114100, 65536, 0, -1179636, 65536, 0, -1245172, 65536, 0, -1310708, 65536, 0, -1376244, 65536, 0, -1441780, 65536, 0, -1507316, 65536, 0, -1572852, 65536, 0, -1638388, 65536, 0, -1703924, 65536, 0, -1638414, 65536, 0, -786445, 0, 0, -786444, 131072, 0, -786443, 0, 0, -786442, 131072, 0, -786441, 0, 0, -786440, 131072, 0, -786439, 0, 0, -786438, 131072, 0, -786437, 0, 0, -786436, 131072, 0, -786435, 0, 0, -786434, 131072, 0, -786433, 0, 0, -851968, 131072, 0, -851967, 0, 0, -851966, 131072, 0, -851965, 0, 0, -851964, 131072, 0, -851963, 0, 0, -851962, 131072, 0, -851961, 0, 0, -851960, 131072, 0, -851959, 0, 0, -851958, 131072, 0, -851957, 0, 0, -917493, 0, 0, -917494, 0, 0, -917495, 131072, 0, -917496, 0, 0, -917497, 131072, 0, -917498, 0, 0, -917499, 131072, 0, -983036, 131072, 0, -983037, 0, 0, -983038, 131072, 0, -983039, 0, 0, -983040, 131072, 0, -917505, 0, 0, -917506, 131072, 0, -917507, 0, 0, -917508, 131072, 0, -917509, 0, 0, -917510, 131072, 0, -917511, 0, 0, -917512, 131072, 0, -917513, 0, 0, -917514, 131072, 0, -917515, 0, 0, -917516, 131072, 0, -851980, 0, 0, -851981, 0, 0, -917517, 0, 0, -983053, 0, 0, -1048589, 0, 0, -1048588, 131072, 0, -1048587, 0, 0, -1048586, 131072, 0, -1048585, 0, 0, -1048584, 131072, 0, -1048583, 0, 0, -1048582, 131072, 0, -1048581, 0, 0, -1048580, 131072, 0, -1048579, 0, 0, -1048578, 131072, 0, -1048577, 0, 0, -1114112, 131072, 0, -1114111, 0, 0, -1114110, 131072, 0, -1114109, 0, 0, -1114108, 131072, 0, -1114107, 0, 0, -1114106, 131072, 0, -1114105, 0, 0, -1114104, 131072, 0, -1114103, 0, 0, -1114102, 131072, 0, -1114101, 0, 0, -1048565, 0, 0, -983029, 0, 0, -983030, 131072, 0, -983031, 0, 0, -983032, 131072, 0, -983033, 0, 0, -1048569, 131072, 0, -1048570, 0, 0, -1048571, 131072, 0, -1048572, 0, 0, -1048573, 131072, 0, -1048574, 0, 0, -1048575, 131072, 0, -1048576, 0, 0, -983041, 131072, 0, -983042, 0, 0, -983043, 131072, 0, -983044, 0, 0, -983045, 131072, 0, -983046, 0, 0, -983047, 131072, 0, -983048, 0, 0, -983049, 131072, 0, -983050, 0, 0, -983051, 131072, 0, -983052, 0, 0, -851977, 131072, 0, -851976, 0, 0, -851975, 131072, 0, -851974, 0, 0, -851973, 131072, 0, -851972, 0, 0, -851971, 131072, 0, -851970, 0, 0, -851969, 131072, 0, -917504, 0, 0, -917503, 131072, 0, -917502, 0, 0, -917501, 131072, 0, -917500, 0, 0, -983034, 131072, 0, -983035, 0, 0, -1048568, 0, 0, -1048567, 131072, 0, -1048566, 0, 0, -851978, 0, 0, -851979, 131072, 0, -1703950, 65536, 0, -1769486, 65536, 0, -1835022, 65536, 0, -1900558, 65536, 0, -1966094, 65536, 0, -2031630, 65536, 0, -2031629, 65536, 0, -2031628, 65536, 0, -2031627, 65536, 0, -2097144, 65536, 0, -2031626, 65536, 0, -2031625, 65536, 0, -2031624, 65536, 0, -2031623, 65536, 0, -2031622, 65536, 0, -2031621, 65536, 0, -2031620, 65536, 0, -2031619, 65536, 0, -2031618, 65536, 0, -2031617, 65536, 0, -2097152, 65536, 0, -2097151, 65536, 0, -2097150, 65536, 0, -2097149, 65536, 0, -2097148, 65536, 0, -2097147, 65536, 0, -2097146, 65536, 0, -2097145, 65536, 0, -2097143, 65536, 0, -2097142, 65536, 0, -2097141, 65536, 0, -2031604, 65536, 0, -2097140, 65536, 0, -1966068, 65536, 0, -1900532, 65536, 0, -1834996, 65536, 0, -1769460, 65536, 0, -1441791, 131072, 0, -1507327, 0, 0, -1572863, 131072, 0, -1638399, 0, 0, -1703935, 0, 0, -1769471, 0, 0, -1835007, 0, 0, -1900543, 0, 0, -1966079, 0, 0, -2031615, 0, 0, -2031616, 0, 0, -1966081, 0, 0, -1966082, 0, 0, -1966083, 0, 0, -1966084, 0, 0, -1966085, 0, 0, -1966086, 0, 0, -1966087, 0, 0, -1966088, 0, 0, -1966089, 0, 0, -1966090, 0, 0, -1966091, 0, 0, -1966092, 0, 0, -1966093, 0, 0, -1900557, 0, 0, -1835021, 0, 0, -1769485, 0, 0, -1703949, 0, 0, -1638413, 0, 0, -1572877, 0, 0, -1507341, 0, 0, -1441805, 0, 0, -1376269, 0, 0, -1310733, 0, 0, -1245197, 0, 0, -1179661, 0, 0, -1114125, 0, 0, -1114124, 0, 0, -1179660, 131072, 0, -1245196, 0, 0, -1310732, 131072, 0, -1376268, 0, 0, -1441804, 131072, 0, -1507340, 0, 0, -1572876, 131072, 0, -1638412, 0, 0, -1703948, 0, 0, -1769484, 0, 0, -1835020, 0, 0, -1900556, 0, 0, -1900555, 0, 0, -1835019, 0, 0, -1769483, 0, 0, -1703947, 0, 0, -1638411, 0, 0, -1572875, 0, 0, -1507339, 131072, 0, -1441803, 0, 0, -1376267, 131072, 0, -1310731, 0, 0, -1245195, 131072, 0, -1179659, 0, 0, -1114123, 131072, 0, -1114122, 0, 0, -1179658, 131072, 0, -1245194, 0, 0, -1310730, 131072, 0, -1376266, 0, 0, -1441802, 131072, 0, -1507338, 0, 0, -1572874, 131072, 0, -1638410, 0, 0, -1703946, 0, 0, -1769482, 0, 0, -1835018, 0, 0, -1900554, 0, 0, -1900553, 0, 0, -1835017, 0, 0, -1769481, 0, 0, -1703945, 0, 0, -1638409, 0, 0, -1572873, 0, 0, -1507337, 131072, 0, -1441801, 0, 0, -1376265, 131072, 0, -1310729, 0, 0, -1245193, 131072, 0, -1179657, 0, 0, -1114121, 131072, 0, -1114120, 0, 0, -1179656, 131072, 0, -1245192, 0, 0, -1310728, 131072, 0, -1376264, 0, 0, -1441800, 131072, 0, -1507336, 0, 0, -1572872, 131072, 0, -1638408, 0, 0, -1703944, 0, 0, -1769480, 0, 0, -1835016, 0, 0, -1900552, 0, 0, -1900551, 0, 0, -1835015, 0, 0, -1769479, 0, 0, -1703943, 0, 0, -1638407, 0, 0, -1572871, 0, 0, -1507335, 131072, 0, -1441799, 0, 0, -1376263, 131072, 0, -1310727, 0, 0, -1245191, 131072, 0, -1179655, 0, 0, -1114119, 131072, 0, -1114118, 0, 0, -1179654, 131072, 0, -1245190, 0, 0, -1310726, 131072, 0, -1376262, 0, 0, -1441798, 131072, 0, -1507334, 0, 0, -1572870, 131072, 0, -1638406, 0, 0, -1703942, 0, 0, -1769478, 0, 0, -1835014, 0, 0, -1900550, 0, 0, -1900549, 0, 0, -1835013, 0, 0, -1769477, 0, 0, -1703941, 0, 0, -1638405, 0, 0, -1572869, 0, 0, -1507333, 131072, 0, -1441797, 0, 0, -1376261, 131072, 0, -1310725, 0, 0, -1245189, 131072, 0, -1179653, 0, 0, -1114117, 131072, 0, -1114116, 0, 0, -1179652, 131072, 0, -1245188, 0, 0, -1310724, 131072, 0, -1376260, 0, 0, -1441796, 131072, 0, -1507332, 0, 0, -1572868, 131072, 0, -1638404, 0, 0, -1703940, 0, 0, -1769476, 0, 0, -1835012, 0, 0, -1900548, 0, 0, -1900547, 0, 0, -1835011, 0, 0, -1769475, 0, 0, -1703939, 0, 0, -1638403, 0, 0, -1572867, 0, 0, -1507331, 131072, 0, -1441795, 0, 0, -1376259, 131072, 0, -1310723, 0, 0, -1245187, 131072, 0, -1179651, 0, 0, -1114115, 131072, 0, -1114114, 0, 0, -1179650, 131072, 0, -1245186, 0, 0, -1310722, 131072, 0, -1376258, 0, 0, -1441794, 131072, 0, -1507330, 0, 0, -1572866, 131072, 0, -1638402, 0, 0, -1703938, 0, 0, -1769474, 0, 0, -1835010, 0, 0, -1900546, 0, 0, -1900545, 0, 0, -1835009, 0, 0, -1769473, 0, 0, -1703937, 0, 0, -1638401, 0, 0, -1572865, 0, 0, -1507329, 131072, 0, -1441793, 0, 0, -1376257, 131072, 0, -1310721, 0, 0, -1245185, 131072, 0, -1179649, 0, 0, -1114113, 131072, 0, -1179648, 0, 0, -1245184, 131072, 0, -1310720, 0, 0, -1376256, 131072, 0, -1441792, 0, 0, -1507328, 131072, 0, -1572864, 0, 0, -1638400, 131072, 0, -1703936, 0, 0, -1769472, 0, 0, -1835008, 0, 0, -1900544, 0, 0, -1966080, 0, 0, -1376255, 0, 0, -1310719, 131072, 0, -1245183, 0, 0, -1179647, 131072, 0, -1179646, 0, 0, -1245182, 131072, 0, -1310718, 0, 0, -1376254, 131072, 0, -1441790, 0, 0, -1507326, 131072, 0, -1572862, 0, 0, -1638398, 131072, 0, -1703934, 0, 0, -1769470, 0, 0, -1835006, 0, 0, -1900542, 0, 0, -1966078, 0, 0, -2031614, 0, 0, -2031613, 0, 0, -1966077, 0, 0, -1900541, 0, 0, -1835005, 0, 0, -1769469, 0, 0, -1703933, 0, 0, -1638397, 0, 0, -1572861, 131072, 0, -1507325, 0, 0, -1441789, 131072, 0, -1376253, 0, 0, -1310717, 131072, 0, -1245181, 0, 0, -1179645, 131072, 0, -1179644, 0, 0, -1245180, 131072, 0, -1310716, 0, 0, -1376252, 131072, 0, -1441788, 0, 0, -1507324, 131072, 0, -1572860, 0, 0, -1638396, 131072, 0, -1703932, 0, 0, -1769468, 0, 0, -1835004, 0, 0, -1900540, 0, 0, -1966076, 0, 0, -2031612, 0, 0, -2031611, 0, 0, -1966075, 0, 0, -1900539, 0, 0, -1835003, 0, 0, -1769467, 0, 0, -1703931, 0, 0, -1638395, 0, 0, -1572859, 131072, 0, -1507323, 0, 0, -1441787, 131072, 0, -1376251, 0, 0, -1310715, 131072, 0, -1245179, 0, 0, -1179643, 131072, 0, -1179642, 0, 0, -1245178, 131072, 0, -1310714, 0, 0, -1376250, 131072, 0, -1441786, 0, 0, -1507322, 131072, 0, -1572858, 0, 0, -1638394, 131072, 0, -1703930, 0, 0, -1769466, 0, 0, -1835002, 0, 0, -1900538, 0, 0, -1966074, 0, 0, -2031610, 0, 0, -2031609, 0, 0, -1966073, 0, 0, -1900537, 0, 0, -1835001, 0, 0, -1769465, 0, 0, -1703929, 0, 0, -1638393, 0, 0, -1572857, 131072, 0, -1507321, 0, 0, -1441785, 131072, 0, -1376249, 0, 0, -1310713, 131072, 0, -1245177, 0, 0, -1179641, 131072, 0, -1179640, 0, 0, -1245176, 131072, 0, -1310712, 0, 0, -1376248, 131072, 0, -1441784, 0, 0, -1507320, 131072, 0, -1572856, 0, 0, -1638392, 131072, 0, -1703928, 0, 0, -1769464, 0, 0, -1835000, 0, 0, -1900536, 0, 0, -1966072, 0, 0, -2031608, 0, 0, -2031607, 0, 0, -1966071, 0, 0, -1900535, 0, 0, -1834999, 0, 0, -1769463, 0, 0, -1703927, 0, 0, -1638391, 0, 0, -1572855, 131072, 0, -1507319, 0, 0, -1441783, 131072, 0, -1376247, 0, 0, -1310711, 131072, 0, -1245175, 0, 0, -1179639, 131072, 0, -1179638, 0, 0, -1245174, 131072, 0, -1310710, 0, 0, -1376246, 131072, 0, -1441782, 0, 0, -1507318, 131072, 0, -1572854, 0, 0, -1638390, 131072, 0, -1703926, 0, 0, -1769462, 0, 0, -1834998, 0, 0, -1900534, 0, 0, -1966070, 0, 0, -2031606, 0, 0, -2031605, 0, 0, -1966069, 0, 0, -1900533, 0, 0, -1834997, 0, 0, -1769461, 0, 0, -1703925, 0, 0, -1638389, 0, 0, -1572853, 0, 0, -1507317, 0, 0, -1441781, 0, 0, -1376245, 0, 0, -1310709, 0, 0, -1245173, 0, 0, -1179637, 0, 0)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="alleys" type="Node2D" parent="."]

[node name="scorepanel" type="Panel" parent="."]
offset_left = -666.0
offset_top = -318.0
offset_right = -230.0
offset_bottom = 182.0

[node name="ScrollContainer" type="ScrollContainer" parent="scorepanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 435.0
offset_bottom = 498.0

[node name="VBoxContainer" type="VBoxContainer" parent="scorepanel/ScrollContainer"]
layout_mode = 2

[node name="Some Guy" parent="scorepanel/ScrollContainer/VBoxContainer" instance=ExtResource("4_owa7m")]
layout_mode = 2

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(193, -281)

[node name="Timer" type="Timer" parent="."]
wait_time = 19.551
autostart = true

[node name="twitchchat" type="Node" parent="."]
script = ExtResource("4_qqy7p")

[node name="TwitchIRCClient" parent="." instance=ExtResource("5_eodoe")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="authentication_completed" from="TwitchIRCClient" to="twitchchat" method="_on_twitch_irc_client_authentication_completed"]
[connection signal="connection_opened" from="TwitchIRCClient" to="twitchchat" method="_on_twitch_irc_client_connection_opened"]
[connection signal="logger" from="TwitchIRCClient" to="twitchchat" method="_on_twitch_irc_client_logger"]
[connection signal="message_received" from="TwitchIRCClient" to="twitchchat" method="_on_twitch_irc_client_message_received"]
